--- a/quarto/presentation.qmd
+++ b/quarto/presentation.qmd
@@ -12,24 +12,6 @@ format:
         logo: https://corentinducloux.fr/dossier_img/mecen_transparent.png
 ---
 
-
-## Introduction {background-image="img\territoire_vin.png" background-opacity="0.5"}
-
-<link rel="stylesheet" 
-href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-<link href='https://fonts.googleapis.com/css?family=Fira Code' rel='stylesheet'>
-
-
-- Une immersion en territoire alcoolisé s'impose...
-<div style="display: flex; justify-content: center; align-items: center; height: 60vh;">
-<iframe width="800" height="340" src="https://www.youtube.com/embed/mZ6xNxpuIOQ" title="Bodh&#39;Aktan - À boire" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-
-::: {.notes}
-**GUILLAUME**
-:::
-
-
 ## Le *Pourquoi* du *Comment* {background-image="img\bouteille_dieu.png" background-opacity="0.5"}
 
 - Le 18 janvier approche, une date en apparence anodine mais très importante pour nos deux compères.
@@ -607,7 +589,7 @@ Le `Dockerfile` spécifie les étapes pour installer les dépendances de l'appli
 
 - *Contenu du `Dockerfile` :*
 
-```{.Dockerfile code-line-numbers="|1|2|4|6-8|10-13|15-16|18|20|22|24|"}
+```{.Dockerfile}
 FROM python:3.10-slim-buster
 WORKDIR /app
 
