--- a/quarto/presentation.qmd
+++ b/quarto/presentation.qmd
@@ -13,6 +13,7 @@ format:
         include-in-header: 
             - text: | 
                 <link href='https://fonts.googleapis.com/css?family=Fira Code' rel='stylesheet'>
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 ---
 
 ## Le *Pourquoi* du *Comment* {background-image="img\bouteille_dieu.png" background-opacity="0.5"}
