--- a/ipynb.ipynb
+++ b/ipynb.ipynb
@@ -309,6 +309,84 @@
    "source": [
     "app.tabs[0].dataframe.values[0][\"name\"].tolist()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.modules.ml_models.models import *\n",
+    "from src.modules.ml_models.prediction import *\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.pipeline import Pipeline "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EXPLIQUEE = \"unit_price\"\n",
+    "\n",
+    "X_train_n, X_test_n, y_train, y_test, _ = init(EXPLIQUEE)\n",
+    "\n",
+    "X_train = X_train_n.drop(columns=[\"name\"])\n",
+    "X_test = X_test_n.drop(columns=[\"name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Pipeline(\n",
+    "    [\n",
+    "        (\"imputation\", SimpleImputer(strategy='mean')),\n",
+    "        (\"model\", LinearRegression()),\n",
+    "    ]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2340618513.082183"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_absolute_error(y_test, res)"
+   ]
   }
  ],
  "metadata": {
@@ -327,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
