--- a/ipynb.ipynb
+++ b/ipynb.ipynb
@@ -290,23 +290,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'🚨 Seuls les cépages ayant une fréquence supérieure à dix sont affichés !'"
+       "[0.398, 0.286, 0.348, 0.427, 0.368, 0.38]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "app.tabs[1].selectbox[0].set_value(\"Cépage majoritaire\").run(timeout=15)\n",
-    "app.tabs[1].warning.values[0]"
+    "app.tabs[4].selectbox[0].set_value(\"Régression - Prédiction du prix\").run(timeout=15)\n",
+    "\n",
+    "app.tabs[4].dataframe.values[0][\"Score Test\"].tolist()"
    ]
   },
   {
