JSON Coverage et ajout du badge de coverage sur le README

--- a/ipynb.ipynb
+++ b/ipynb.ipynb
@@ -290,22 +290,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.398, 0.286, 0.348, 0.427, 0.368, 0.38]"
+       "[0.934, 0.954, 0.976, 0.975, 0.979, 0.981]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "app.tabs[4].selectbox[0].set_value(\"Régression - Prédiction du prix\").run(timeout=15)\n",
+    "app.tabs[4].selectbox[0].set_value(\"Classification - Prédiction type de vin\").run(timeout=15)\n",
     "\n",
     "app.tabs[4].dataframe.values[0][\"Score Test\"].tolist()"
    ]
